# forestflock

./: .gitignore  README.md
ForestFlock/ForestFlock/: AllDevicesView.swift  ContentView.swift  Dashboard.swift  DeviceCard.swift  Devicesheet.swift  ForestFlockApp.swift  MainView.swift  MapComponentView.swift  MapView.swift  RecentEventCard.swift  RecentEvents.swift  RecentWeatherEventCard.swift
ForestFlock/ForestFlock.xcodeproj/: project.pbxproj
ForestFlock/ForestFlock/DashboardWidgets/: CoverageWidget.swift  FireWidget.swift  GraphView.swift  HealthWidget.swift  HumanWidget.swift  RainWidget.swift  SpeciesWidget.swift
ForestFlock/ForestFlock/Models/: Infomodel.swift  ViewModel.swift
forest-flock-backend/: Cargo.toml
forest-flock-backend/data-transcoder/src/: lib.rs
forest-flock-backend/network-types/: Cargo.toml
forest-flock-backend/network-types/src/: lib.rs
forest-flock-backend/server/: Cargo.toml
forest-flock-backend/server/src/: db_driver.rs  main.rs  mesh_egress.rs  network_types.rs
forest-flock-backend/test-client/: Cargo.toml
forest-flock-backend/test-client/src/: main.rs
forest-flock-backend/test-tcp/: Cargo.toml
forest-flock-backend/test-tcp/src/: main.rs
forest-flock-weather-node/ArduinoSenorsTester/: FFWN_SensorsTester.ino
forest-flock-weather-node/ArduinoSenorsTester/SerialReader/: SerialReader.pde
forest-flock-weather-node/ArduinoWeatherNode/: ForestFlockWeatherNode.ino
raspberry_pi/: communicate.py  listen.py  record.py  train.py
raspberry_pi/classifier/: utils.py
(+3 files in other folders)
