[package]
name = "server"
version = "0.1.0"
authors = ["Arpan Dhatt <ary.dhatt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
futures-channel = "*"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
tokio = { version = "1.0.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
url = "2.0.0"
env_logger = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34.6"
chrono = "0.4.19"
